# app

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROMPT.md  README.md  SECURITY.md  docker-compose.yml  index.html  index.yaml  pistonprotection-0.1.0.tgz  rust-toolchain.toml
.claude/: ralph-loop.local.md
.github/workflows/: ci.yaml  ci.yml  docker.yml  ebpf.yml  frontend.yml  helm.yml  release.yaml  release.yml  rust.yml  security.yml
charts/pistonprotection/: Chart.yaml  values-development.yaml  values-minikube.yaml  values-minimal.yaml  values-production.yaml  values-prototype.yaml  values-test.yaml  values.yaml
charts/pistonprotection/templates/: _helpers.tpl  cilium-networkpolicies.yaml  clickhouse.yaml  crds.yaml  frontend-deployment.yaml  gateway-deployment.yaml  gateway-service.yaml  ingress.yaml  operator-deployment.yaml  rbac.yaml  secrets.yaml  servicemonitor.yaml  worker-daemonset.yaml
docker/frontend/: Dockerfile
docker/gateway/: Dockerfile
docker/operator/: Dockerfile
docker/worker/: Dockerfile
docs/: api.md  installation.md
documentation/: package.json  tailwind.config.ts  tsconfig.json
documentation/content/docs/: api.mdx  architecture.mdx  configuration.mdx  filters.mdx  index.mdx  installation.mdx  meta.json  operations.mdx  testing.mdx
documentation/src/app/: layout.tsx  page.tsx
documentation/src/app/docs/: layout.tsx
ebpf/: Cargo.toml
ebpf-tests/: Cargo.toml
ebpf-tests/src/: packet_generator.rs
ebpf/src/: lib.rs  xdp_filter.rs  xdp_http.rs  xdp_minecraft.rs  xdp_quic.rs  xdp_ratelimit.rs  xdp_tcp.rs  xdp_udp.rs
frontend/: app.config.ts  biome.json  drizzle.config.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json
frontend/app/: routeTree.gen.ts  router.tsx
frontend/app/components/ui/: badge.tsx  button.tsx  dropdown-menu.tsx  progress.tsx
frontend/app/lib/: api.ts  auth.ts  utils.ts
frontend/app/routes/: __root.tsx  dashboard.tsx  index.tsx
frontend/app/routes/auth/: login.tsx  register.tsx
frontend/app/routes/dashboard/: analytics.tsx  backends.tsx  filters.tsx  index.tsx  settings.tsx
frontend/app/styles/: globals.css
frontend/content/docs/protocols/: meta.json
frontend/src/: App.tsx  declarations.d.ts  env.ts  index.css  routeTree.gen.ts  styles.css
frontend/src/components/: app-sidebar.tsx  component-example.tsx  organization-switcher.tsx
frontend/src/components/docs/: docs-layout.tsx  mdx-components.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/ui/: alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  button.tsx  combobox.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  popover.tsx  select.tsx  sheet.tsx  sidebar.tsx  tabs.tsx  tooltip.tsx
frontend/src/hooks/: use-organization.tsx
frontend/src/lib/: api.ts  auth-client.ts  auth.ts  source.ts  utils.ts
frontend/src/routes/: __root.tsx  dashboard.tsx  index.tsx  privacy.tsx  terms.tsx
frontend/src/server/: auth-notifications.ts  auth.ts  email.ts  resend.ts  server-utils.ts  stripe.ts
observability/alertmanager/: alertmanager.yml
observability/alloy/: config.alloy
observability/clickhouse/: config.xml  init.sql  users.xml
observability/grafana/dashboards/: overview.json
observability/loki/: loki-config.yaml
observability/otel/: otel-collector-config.yaml
observability/prometheus/: alerts.yaml  prometheus.yml
observability/tempo/: tempo-config.yaml
operator/: Cargo.toml
operator/benches/: operator_benchmarks.rs
operator/config/crds/: ddosprotection.yaml  filterrule.yaml
operator/src/: client.rs  crd.rs  error.rs  lib.rs  main.rs  metrics.rs  worker.rs
operator/src/controllers/: backend.rs  ddos.rs  ddos_protection.rs  filter.rs  filter_rule.rs  ip_blocklist.rs  mod.rs
operator/src/tests/: controller_test.rs  crd_test.rs  grpc_client_test.rs  test_utils.rs
proto/: auth.proto  backend.proto  common.proto  filter.proto  metrics.proto  worker.proto
scripts/: build-ebpf.sh  integration-test.sh  minikube-deploy.sh
services/: Cargo.toml
services/auth/: Cargo.toml
services/auth/src/: config.rs  main.rs
services/auth/src/db/: queries.rs
services/auth/src/handlers/: grpc.rs  http.rs  webhook.rs
services/auth/src/models/: api_key.rs  audit_log.rs  invitation.rs  mod.rs  organization.rs  session.rs  subscription.rs  user.rs
services/auth/src/services/: apikey.rs  auth.rs  dunning.rs  email.rs  jwt.rs  mod.rs  organization.rs  permission.rs  session.rs  stripe.rs  user.rs
services/common/: Cargo.toml
services/common/migrations/: 0001_initial.sql
services/common/src/: config.rs  db.rs  error.rs  geoip.rs  lib.rs  metrics.rs  ratelimit.rs  redis.rs  scoring.rs  telemetry.rs
services/config-mgr/: Cargo.toml
services/config-mgr/src/: config_store.rs  distributor.rs  handlers.rs  main.rs
services/config-mgr/src/tests/: config_store_test.rs  mod.rs  validation_test.rs
services/gateway/: Cargo.toml
services/gateway/src/: main.rs
services/gateway/src/handlers/: grpc.rs  http.rs  mod.rs
services/gateway/src/middleware/: auth.rs  logging.rs  mod.rs  ratelimit.rs
services/gateway/src/services/: backend.rs  circuit_breaker.rs  connection_pool.rs  filter.rs  load_balancer.rs  metrics.rs  mod.rs  scoring.rs
services/gateway/src/tests/: grpc_test.rs  handlers_test.rs  mock_db.rs  test_utils.rs
services/metrics/: Cargo.toml
services/metrics/src/: aggregator.rs  alerts.rs  clickhouse.rs  handlers.rs  main.rs  storage.rs  streams.rs
services/proto/: Cargo.toml  build.rs
services/proto/src/: lib.rs
services/worker/: Cargo.toml
services/worker/benches/: worker_benchmarks.rs
services/worker/src/: config_sync.rs  control_plane.rs  main.rs
services/worker/src/ebpf/: interface.rs  loader.rs  maps.rs  mod.rs  programs.rs
services/worker/src/handlers/: http.rs  mod.rs
services/worker/src/protocol/: haproxy.rs  http.rs  minecraft.rs  mod.rs  quic.rs  tcp.rs  udp.rs
services/worker/src/routing/: load_balancer.rs
services/worker/src/tests/: protocol_parser_test.rs  test_utils.rs
(+47 files in other folders)
