[package]
name = "pistonprotection-ebpf-tests"
version = "0.1.0"
edition = "2021"
description = "Userspace tests for PistonProtection eBPF/XDP packet filters"

[dependencies]

[dev-dependencies]

[lib]
path = "src/lib.rs"

[[test]]
name = "packet_filter_tests"
path = "tests/mod.rs"

# Test code often has unused items for test coverage
[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
