[package]
name = "pistonprotection-ebpf"
version = "0.1.0"
edition = "2024"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"

[[bin]]
name = "xdp_filter"
path = "src/xdp_filter.rs"

[[bin]]
name = "xdp_ratelimit"
path = "src/xdp_ratelimit.rs"

[[bin]]
name = "xdp_minecraft"
path = "src/xdp_minecraft.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
