[package]
name = "pistonprotection-operator"
version = "0.1.0"
edition = "2024"
description = "Kubernetes operator for PistonProtection DDoS protection"
license = "MIT"

[dependencies]
# Kubernetes
kube = { version = "0.92", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.22", features = ["latest"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"

# Schema generation
schemars = "0.8"

# Metrics
prometheus = "0.13"

[dev-dependencies]
tokio-test = "0.4"
