[workspace]
resolver = "2"
members = [
    "common",
    "gateway",
    "config-mgr",
    "metrics",
    "worker",
    "proto",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["PistonProtection Team"]
license = "Apache-2.0"
repository = "https://github.com/PistonProtection/pistonprotection"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full", "tracing"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

# gRPC and Protobuf
tonic = { version = "0.13", features = ["tls", "transport", "gzip", "zstd"] }
tonic-build = "0.13"
tonic-health = "0.13"
tonic-reflection = "0.13"
prost = "0.14"
prost-types = "0.14"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
deadpool-postgres = "0.14"

# Redis
redis = { version = "0.28", features = ["tokio-comp", "connection-manager", "cluster"] }
deadpool-redis = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.28", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.28", features = ["trace", "metrics"] }

# Metrics
prometheus = "0.14"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# Configuration
config = "0.14"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utils
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.0"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "6.0"
lru = "0.13"

# HTTP client (for health checks, webhooks)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# IP and network
ipnetwork = "0.20"
trust-dns-resolver = "0.24"

# GeoIP
maxminddb = "0.24"

# Rate limiting
governor = "0.8"

# Kubernetes
kube = { version = "0.98", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }

# eBPF
aya = "0.13"
aya-log = "0.2"

# Testing
tokio-test = "0.4"
mockall = "0.13"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
