[workspace]
resolver = "2"
members = [
    "common",
    "gateway",
    "config-mgr",
    "metrics",
    "worker",
    "proto",
    "auth",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PistonProtection Team"]
license = "Apache-2.0"
repository = "https://github.com/PistonProtection/pistonprotection"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full", "tracing"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

# gRPC and Protobuf
tonic = { version = "0.13", features = ["transport", "tls-ring", "tls-native-roots", "gzip", "zstd"] }
tonic-build = "0.13"
tonic-health = "0.13"
tonic-reflection = "0.13"
prost = "0.13"
prost-types = "0.13"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
deadpool-postgres = "0.14"

# Redis
redis = { version = "0.29", features = ["tokio-comp", "connection-manager", "cluster"] }
deadpool-redis = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.29"
opentelemetry = { version = "0.29", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.29", features = ["trace", "metrics"] }

# Metrics
prometheus = "0.14"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# Configuration
config = "0.15"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utils
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.0"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
rand = "0.9"
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "6.0"
lru = "0.13"
hex = "0.4"

# HTTP client (for health checks, webhooks)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"

# IP and network
ipnetwork = "0.21"
hickory-resolver = "0.25" # Renamed from trust-dns-resolver

# GeoIP
maxminddb = "0.25"

# Rate limiting
governor = "0.10"

# Kubernetes
kube = { version = "0.99", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }

# eBPF
aya = "0.13"
aya-log = "0.2"

# ClickHouse
clickhouse = { version = "0.13", features = ["inserter", "watch", "uuid", "chrono"] }

# Testing
tokio-test = "0.4"
mockall = "0.13"

[workspace.lints.clippy]
# Allow large error variants since tonic::Status is intentionally large
# and this is idiomatic in gRPC services
result_large_err = "allow"

[workspace.lints.rust]
# These are common in proto-generated code and gRPC services
mismatched_lifetime_syntaxes = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
