[package]
name = "pistonprotection-common"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
pistonprotection-proto = { path = "../proto" }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }
deadpool-redis = { workspace = true }
redis = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }

# Metrics
prometheus = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Configuration
config = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
lru = { workspace = true }

# Validation
validator = { workspace = true }

# IP and network
ipnetwork = { workspace = true }

# GeoIP
maxminddb = { workspace = true }

# Rate limiting
governor = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
