[package]
name = "pistonprotection-gateway"
version.workspace = true
edition = "2024"
license.workspace = true

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
pistonprotection-proto = { path = "../proto" }
pistonprotection-common = { path = "../common" }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# gRPC
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }

# Database
sqlx = { workspace = true }

# Redis
deadpool-redis = { workspace = true }
redis = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Validation
validator = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Metrics
prometheus = { workspace = true }

# Config
config = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

# HTTP server (for health/metrics endpoints)
axum = { version = "0.8", features = ["http2"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }

# Lazy static
lazy_static = "1.4"

# HTTP body utils
bytes = "1"

# Async streaming
async-stream = "0.3"

# JWT validation
jsonwebtoken = "9.3"

# DNS resolution for domain verification
hickory-resolver = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
tempfile = "3.10"
serial_test = "3.0"
wiremock = "0.6"
test-case = "3.3"
pretty_assertions = "1.4"
fake = { version = "2.9", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[test]]
name = "integration"
path = "src/tests/mod.rs"

[[bench]]
name = "gateway_benchmarks"
harness = false

[lints]
workspace = true
