[package]
name = "pistonprotection-proto"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
bytes = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
