[package]
name = "pistonprotection-proto"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[lints]
workspace = true
