[package]
name = "pistonprotection-worker"
version.workspace = true
edition = "2024"
license.workspace = true

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
pistonprotection-proto = { path = "../proto" }
pistonprotection-common = { path = "../common" }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# gRPC
tonic = { workspace = true }

# Redis
deadpool-redis = { workspace = true }
redis = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Metrics
prometheus = { workspace = true }

# Config
config = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }

# eBPF
aya = { workspace = true }
aya-log = { workspace = true }

# System info
sysinfo = "0.32"
nix = { version = "0.29", features = ["net", "ioctl"] }

# HTTP server (for health/metrics endpoints)
axum = { version = "0.8", features = ["http2"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Lazy static
lazy_static = "1.4"

[dev-dependencies]
tokio-test = { workspace = true }
