[package]
name = "pistonprotection-worker"
version.workspace = true
edition = "2021"
license.workspace = true
description = "PistonProtection Worker - Edge node for eBPF/XDP packet filtering"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
pistonprotection-proto = { path = "../proto" }
pistonprotection-common = { path = "../common" }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# gRPC
tonic = { workspace = true }

# Redis
deadpool-redis = { workspace = true }
redis = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Metrics
prometheus = { workspace = true }

# Config
config = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }

# eBPF
aya = { workspace = true }
aya-log = { workspace = true }

# System info
sysinfo = "0.32"
nix = { version = "0.29", features = ["net", "ioctl", "user"] }

# HTTP server (for health/metrics endpoints)
axum = { version = "0.8", features = ["http2"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Lazy static
lazy_static = "1.4"

# Hostname detection
hostname = "0.4"

[dev-dependencies]
tokio-test = { workspace = true }
mockall = "0.13"
tempfile = "3.10"
serial_test = "3.0"
test-case = "3.3"
pretty_assertions = "1.4"
fake = { version = "2.9", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[test]]
name = "integration"
path = "src/tests/mod.rs"

[[bench]]
name = "worker_benchmarks"
harness = false
